--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -21,25 +21,25 @@
         <div class="navbar-collapse collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("See per stations", "SearchStation", "Station"/*, new { @class = "nav-link" }*/)
+                    <a href="/Station/SearchStation/" class="nav-link">See per stations</a>
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("See Connection", "SearchConnection", "Connection", new { @class = "nav-link" })
+                    <a href="/Connection/SearchConnection/" class="nav-link">See Connection</a>
                 </li>
                 @if (Session["user"] == null)
                 {
                     <li class="nav-item">
-                        @Html.ActionLink("Log in", "ConnectionPage", "User", new { @class = "nav-link" })
+                        <a href="/User/ConnectionPage/" class="nav-link">Log in</a>
                     </li>
                 }
                 else
                 {
                     <li class="nav-item">
-                        @Html.ActionLink("Profile", "Index", "User", new { @class = "nav-link" })
+                        <a href="/User/Index/" class="nav-link">Profile</a>
 
                     </li>
                     <li class="nav-item">
-                        @Html.ActionLink("Log off", "Disconnect", "User", new { @class = "nav-link" })
+                        <a href="/User/Disconnect/" class="nav-link">Log off</a>
                     </li>
                 }
             </ul>
@@ -48,12 +48,12 @@
 
     <div class="container body-content">
         @RenderBody()
-        <br /><a href='javascript:history.go(-1)'>Go Back to Previous Page</a>
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year Nathan Pire- GetDelays</p>
-        </footer>
-    </div>
+        <br /><button onclick="window.location.href = 'javascript:history.go(-1)';" type="button" class="btn btn-secondary">Go Back to Previous Page</button>
+    <hr />
+    <footer>
+        <p>&copy; @DateTime.Now.Year Nathan Pire- GetDelays</p>
+    </footer>
+</div>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
