--- a/getdelays.be/Views/User/CreateAccount.cshtml
+++ b/getdelays.be/Views/User/CreateAccount.cshtml
@@ -5,19 +5,40 @@
 }
 <script type="text/javascript"
         src='https://www.google.com/recaptcha/api.js'></script>
-<h2>Create Account</h2>
-<p>@error</p><br />
+@if (error != null)
+{
+    <div class="alert alert-dismissible alert-warning">
+        <p class="mb-0">@error</p><br />
+    </div>
+}
 @using (Html.BeginForm("MakeAccount", "User", FormMethod.Post))
 {
-    <p>
-        Name:<input type="text" id="name" name="name" /><br />
-        Firstname:<input type="text" id="surname" name="surname" /><br />
-        Email:<input type="text" id="email" name="email" /><br />
-        Password:<input type="password" id="password" name="password" /><br />
-        Phone Number:<input type="tel" id="phoneNumber" name="phoneNumber" /><br />
+    <fieldset>
+        <legend>Make Your Account</legend>
+        <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label>Name:</label>
+            <input type="text" class="form-control" name="name" id="name" placeholder="Jhon">
+        </div>
+        <div class="form-group">
+            <label>FirstName:</label>
+            <input type="text" class="form-control" name="surname" id="surname" placeholder="Smith">
+        </div>
+        <div class="form-group">
+            <label>Phone Number:</label>
+            <input type="tel" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="0471234567">
+        </div>
         <div class="g-recaptcha" data-sitekey="6Le9eGEUAAAAAAaEJNZ-eQfCUkfr6iw0pYsW4gen"></div>
-        <input type="submit" id='submit'/>
-    </p>
+        <button type="submit" id='submit' class="btn btn-primary">Submit</button>
+    </fieldset>
 }
 <script>onload();</script>
 
