--- a/getdelays.be/Views/User/Login.cshtml
+++ b/getdelays.be/Views/User/Login.cshtml
@@ -2,17 +2,27 @@
     ViewBag.Title = "Login";
     string error = ViewBag.error;
 }
-
-<h2>Login</h2>
-<p>@error</p><br />
-@using (Html.BeginForm("Login","User",FormMethod.Post))
+@if (error != null)
 {
-<p>
-    Email:<input type="text" id="email" name="email" /><br />
-    Password:<input type="password" id="password" name="password" /><br />
-    <input type="submit" value="submit" /><br />
-    @Html.ActionLink("Not yet an account? Create one", "CreateAccount", "User")
-</p>
+    <div class="alert alert-dismissible alert-warning">
+        <p class="mb-0">@error</p><br />
+    </div>
+}
+@using (Html.BeginForm("Login", "User", FormMethod.Post))
+{
+    <fieldset>
+        <legend>login</legend>
+        <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+        </div>
+        <button type="submit" value="submit" class="btn btn-primary">Submit</button><br />
+        @Html.ActionLink("Not yet an account? Create one", "CreateAccount", "User")
+    </fieldset>
 }
 
 
