--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -35,8 +35,10 @@
                 else
                 {
                     <li class="nav-item">
+                        <a href="/User/Notification/" class="nav-link">Notification</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="/User/Index/" class="nav-link">Profile</a>
-
                     </li>
                     <li class="nav-item">
                         <a href="/User/Disconnect/" class="nav-link">Log off</a>
