--- a/getdelays.be/Views/User/MakeChangeInformation.cshtml
+++ b/getdelays.be/Views/User/MakeChangeInformation.cshtml
@@ -4,7 +4,7 @@
     User u = ViewBag.user;
 }
 
-@using (Html.BeginForm("MakeChange", "profil", FormMethod.Post))
+@using (Html.BeginForm("MakeChange", "User", FormMethod.Post))
 {
     <fieldset>
         <legend>Change your information</legend>
